# IcIES/etc
# Maintainer:  SAITO Fuyuki
# Created: Mar 29 2013
# Time-stamp: <2020/09/15 14:02:39 fuyuki Makefile.am>

# Copyright: 2013--2020 JAMSTEC, Ayako ABE-OUCHI
# Licensed under the Apache License, Version 2.0
#   (https://www.apache.org/licenses/LICENSE-2.0)

SUBDIRS       =	helper

### Local Variables:
### mode: makefile-automake
### end:
