# IcIES/run
# Maintainer:  SAITO Fuyuki
# Created: Sep 16 2020
# Time-stamp: <2020/09/16 06:45:44 fuyuki Makefile.am>

# Copyright: 2020 JAMSTEC, Ayako ABE-OUCHI
# Licensed under the Apache License, Version 2.0
#   (https://www.apache.org/licenses/LICENSE-2.0)

EXTRA_DIST	=	tmpl
bin_SCRIPTS	=	xicies_jp.sh
CLEANFILES		= $(bin_SCRIPTS) ##%% a
dist_noinst_SCRIPTS	=	gfig2.sh symlogx.py

### Local Variables:
### mode: makefile-automake
### end:
