# IcIES/run
# Maintainer:  SAITO Fuyuki
# Created: Sep 16 2020
# Time-stamp: <2021/02/07 22:43:28 fuyuki Makefile.am>

# Copyright: 2020, 2021 JAMSTEC, Ayako ABE-OUCHI
# Licensed under the Apache License, Version 2.0
#   (https://www.apache.org/licenses/LICENSE-2.0)

EXTRA_DIST	=	tmpl
bin_SCRIPTS	=	xicies_jp.sh xicies_jp_env.sh
CLEANFILES		= $(bin_SCRIPTS) ##%% a
dist_noinst_SCRIPTS	=	gfig2.sh symlogx.py

### Local Variables:
### mode: makefile-automake
### end:
