# IcIES/doc/r Makefile.am
# Maintainer:  SAITO Fuyuki
# Created: Nov 12 2013
# Time-stamp: <2020/09/17 09:06:24 fuyuki Makefile.am>
# Copyright: 2013--2020 JAMSTEC, Ayako ABE-OUCHI
# Licensed under the Apache License, Version 2.0
#   (https://www.apache.org/licenses/LICENSE-2.0)

EXTRA_DIST = coding.rst

### Local Variables:
### mode: makefile-automake
### end:
