# IcIES/etc/helper
# Maintainer:  SAITO Fuyuki
# Created: Mar 29 2013
# Time-stamp: <2020/09/17 09:06:49 fuyuki Makefile.am>
# Copyright: 2013--2020 JAMSTEC, Ayako ABE-OUCHI
# Licensed under the Apache License, Version 2.0
#   (https://www.apache.org/licenses/LICENSE-2.0)

SUBDIRS       	=	bin
EXTRA_DIST		=	src

### Local Variables:
### mode: makefile-automake
### end:
