# IcIES/etc/misc
# Maintainer:  SAITO Fuyuki
# Created: Feb 17 2021
# Time-stamp: <2021/02/17 21:19:19 fuyuki Makefile.am>
# Copyright: 2021 JAMSTEC
# Licensed under the Apache License, Version 2.0
#   (https://www.apache.org/licenses/LICENSE-2.0)

EXTRA_DIST	=	ageni.F90  levopt.F90  wvi.F90 zetani.F90

### Local Variables:
### mode: makefile-automake
### end:
